--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,26 @@
 
   <body>
     <header class="row">
-    <div class="col3"
-      LOGO
+    <div class="col3">
+      <div class='circle'>
+        <br  />
+        You know
+        <br  />
+        you need
+        <br />
+        to code
+      </div>
     </div>
-      <div class="col-4">
+      <div class="col-4 slogan">
         Splurting out unsolicited advice about entrepeneurship since 2016
       </div>
-      <div class="col-5">
+      <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#'%>
       </div>
     </header>
+    
+    <hr />
     
     <br class='clear' />
     
