--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   <body>
     <header class="row">
     <div class="col3">
-      <div class='circle'>
+      <%= link_to root_path, calss:'logo' do %>
+        <div class='circle'>
         <br  />
         You know
         <br  />
@@ -19,12 +20,13 @@
         <br />
         to code
       </div>
+    <% end %>
     </div>
       <div class="col-4 slogan">
         Splurting out unsolicited advice about entrepeneurship since 2016
       </div>
       <div class="col-5 links">
-        <%= link_to 'Contribute', '#' %>
+        <%= link_to 'Contribute', new_quote_path %>
         <%= link_to 'About', '#'%>
       </div>
     </header>
@@ -42,7 +44,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-            <% link_to "This isn't enough, I need more." "#", class: 'next-quote'%>
+            <% link_to "This isn't enough, I need more.",root_path, class: 'next-quote'%>
       </div>
       <div class="col-6 footer-blurb">
        Made in Boulder, CO by Tristan Beasley <a href="twbeasley13@gmail.com"></a><br />
