--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -5,7 +5,7 @@
 
 
 
-<h1><%= @quote.inspect %></h1>
+<h1><%= @quote.saying %></h1>
 <h2 class="float-right">- <%= @quote.author %></h2>
 
 <br class="clear" />
